--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -4,5 +4,5 @@
     <p><%= x.title %></p>
     <p><%= x.subtitle %></p>
     <p><%= x.body %></p>
-    <%= image_tag x.thumb_image %>
+    <%= image_tag x.thumb_image unless x.thumb_image.nil? %>
 <% end %>
