--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -3,7 +3,7 @@
 <%= link_to "Create new item", new_portfolio_path %>
 
 <% @portfolio_items.each do |x| %>
-    <p><%= x.title %></p>
+    <p><%= link_to x.title, portfolio_path(x.id) %></p>
     <p><%= x.subtitle %></p>
     <p><%= x.body %></p>
     <%= image_tag x.thumb_image unless x.thumb_image.nil? %>
