--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -8,4 +8,5 @@
     <p><%= x.body %></p>
     <%= image_tag x.thumb_image unless x.thumb_image.nil? %>
     <%= link_to "Edit", edit_portfolio_path(x.id) %>
+    <%= link_to "Delete", portfolio_path(x.id), method: :delete, data: { confirm: "Are you sure?" } %>
 <% end %>
