impletemented form for nested technologies

--- a/app/views/portfolios/new.html.erb
+++ b/app/views/portfolios/new.html.erb
@@ -17,6 +17,16 @@
     <%= f.label :body %>
     <%= f.text_area :body %>
   </div>
+  
+  <ul>
+    <%= f.fields_for :technologies do |x| %>
+    <li>
+        <%= x.label :name %>
+        <%= x.text_field :name %>
+    </li>
+
+    <% end %>
+  </ul>
 
   <div class="actions">
     <%= f.submit %>
